k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: connectk
  labels:
    app.kubernetes.io/part-of: connectk
